--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-express": "^3.12.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "react-router-dom": "^6.14.0"
   }
 }
